refactor: 降级至 JDK 8 兼容性适配
- 移除 Lombok @Value/@EqualsAndHashCode(callSuper=true) 等 JDK 8+ 注解
- Spring Boot 3.x AutoConfiguration.imports 迁移回 spring.factories
- DTO/Domain 对象手写 getter/setter/equals/hashCode 替代 Lombok
- 调整 InstanceExecutionService 和 StateMachineRegistry 兼容性
- 更新测试用例适配手动实现的 value object

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>