@@ -8,6 +8,8 @@ import cn.chedejun.demo.statemachine.OrderContext;
 import cn.chedejun.demo.statemachine.OutboundContext;
 import cn.chedejun.statemachine.core.ExecuteResult;
 import cn.chedejun.statemachine.core.StateMachineException;
+import cn.chedejun.statemachine.domain.data.InstanceData;
+import cn.chedejun.statemachine.domain.data.SnapshotData;
 import cn.chedejun.statemachine.domain.repository.InstanceRepository;
 import cn.chedejun.statemachine.domain.repository.SnapshotRepository;
 import cn.chedejun.statemachine.domain.shared.InstanceId;
@@ -20,6 +22,7 @@ import org.slf4j.LoggerFactory;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/demo")
@@ -47,9 +50,9 @@ public class DemoController {
     @PostMapping("/order")
     public Map<String, Object> createOrder(@RequestBody OrderCreateRequest req) {
         String orderId = UUID.randomUUID().toString().substring(0, 8);
-        int stock = req.stock() != 0 ? req.stock() : 10;
-        double amount = req.amount() != 0 ? req.amount() : 99.99;
-        String address = req.address() != null && !req.address().isBlank() ? req.address() : "北京市朝阳区";
+        int stock = req.getStock() != 0 ? req.getStock() : 10;
+        double amount = req.getAmount() != 0 ? req.getAmount() : 99.99;
+        String address = req.getAddress() != null && !req.getAddress().isBlank() ? req.getAddress() : "北京市朝阳区";
 
         OrderContext ctx = new OrderContext(orderId, stock, amount);
         OrderContext.UserInfo userInfo = new OrderContext.UserInfo();
@@ -63,23 +66,23 @@ public class DemoController {
         try {
             ExecuteResult result = orderMachine.execute(ctx, orderId);
             log.info("[demo] Order created: orderId={}, instanceId={}, status={}", orderId, result.instanceId(), result.status());
-            return Map.of(
-                "success", true,
-                "orderId", orderId,
-                "instanceId", result.instanceId(),
-                "status", result.status(),
-                "currentState", result.currentState(),
-                "message", "订单执行完成"
-            );
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", true);
+            resp.put("orderId", orderId);
+            resp.put("instanceId", result.instanceId());
+            resp.put("status", result.status());
+            resp.put("currentState", result.currentState());
+            resp.put("message", "订单执行完成");
+            return resp;
         } catch (StateMachineException e) {
             log.error("[demo] Order creation failed: orderId={}", orderId, e);
-            return Map.of(
-                "success", false,
-                "orderId", orderId,
-                "status", "FAILED",
-                "message", e.getMessage(),
-                "stackTrace", stackTrace(e)
-            );
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("orderId", orderId);
+            resp.put("status", "FAILED");
+            resp.put("message", e.getMessage());
+            resp.put("stackTrace", stackTrace(e));
+            return resp;
         }
     }
 
@@ -88,33 +91,39 @@ public class DemoController {
      */
     @PostMapping("/order/resume")
     public Map<String, Object> resumeOrder(@RequestBody OrderResumeRequest req) {
-        if (req.businessId() == null || req.businessId().isBlank()) {
-            return Map.of("success", false, "message", "缺少 businessId 参数");
+        if (req.getBusinessId() == null || req.getBusinessId().isBlank()) {
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("message", "缺少 businessId 参数");
+            return resp;
         }
-        if (req.expectedCurrentState() == null || req.expectedCurrentState().isBlank()) {
-            return Map.of("success", false, "message", "缺少 expectedCurrentState 参数");
+        if (req.getExpectedCurrentState() == null || req.getExpectedCurrentState().isBlank()) {
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("message", "缺少 expectedCurrentState 参数");
+            return resp;
         }
 
         try {
-            orderMachine.resumeByBusinessId(req.businessId(), req.expectedCurrentState(), ctx -> {
-                if (req.shippingAddress() != null && !req.shippingAddress().isBlank()) {
-                    ctx.setShippingAddress(req.shippingAddress());
+            orderMachine.resumeByBusinessId(req.getBusinessId(), req.getExpectedCurrentState(), ctx -> {
+                if (req.getShippingAddress() != null && !req.getShippingAddress().isBlank()) {
+                    ctx.setShippingAddress(req.getShippingAddress());
                 }
             });
-            log.info("[demo] Order resumed: businessId={}", req.businessId());
-            return Map.of(
-                "success", true,
-                "businessId", req.businessId(),
-                "message", "订单已恢复执行，请查询 /demo/orders 查看最新状态"
-            );
+            log.info("[demo] Order resumed: businessId={}", req.getBusinessId());
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", true);
+            resp.put("businessId", req.getBusinessId());
+            resp.put("message", "订单已恢复执行，请查询 /demo/orders 查看最新状态");
+            return resp;
         } catch (StateMachineException e) {
-            log.error("[demo] Order resume failed: businessId={}", req.businessId(), e);
-            return Map.of(
-                "success", false,
-                "status", "FAILED",
-                "message", e.getMessage(),
-                "stackTrace", stackTrace(e)
-            );
+            log.error("[demo] Order resume failed: businessId={}", req.getBusinessId(), e);
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("status", "FAILED");
+            resp.put("message", e.getMessage());
+            resp.put("stackTrace", stackTrace(e));
+            return resp;
         }
     }
 
@@ -124,15 +133,17 @@ public class DemoController {
     @GetMapping("/orders")
     public List<Map<String, Object>> listOrders(@RequestParam(defaultValue = "10") int limit) {
         return instanceRepository.findByMachineName(MachineName.of("order-process"), 0, limit).stream()
-            .map(r -> Map.<String, Object>of(
-                "id", r.id().value(),
-                "businessId", r.businessId() != null ? r.businessId().value() : "",
-                "status", r.status().name(),
-                "currentState", r.currentState().value(),
-                "retryCount", r.retryCount(),
-                "errorMessage", r.errorMessage() != null ? r.errorMessage() : "",
-                "createdAt", r.createdAt().toString()
-            )).toList();
+            .map(r -> {
+                Map<String, Object> m = new LinkedHashMap<>();
+                m.put("id", r.id().value());
+                m.put("businessId", r.businessId() != null ? r.businessId().value() : "");
+                m.put("status", r.status().name());
+                m.put("currentState", r.currentState().value());
+                m.put("retryCount", r.retryCount());
+                m.put("errorMessage", r.errorMessage() != null ? r.errorMessage() : "");
+                m.put("createdAt", r.createdAt().toString());
+                return m;
+            }).collect(Collectors.toList());
     }
 
     /**
@@ -140,23 +151,34 @@ public class DemoController {
      */
     @GetMapping("/orders/{id}")
     public Map<String, Object> orderDetail(@PathVariable String id) {
-        var instance = instanceRepository.findById(InstanceId.of(id));
-        if (instance.isEmpty()) return Map.of("error", "Instance not found");
+        Optional<InstanceData> instance = instanceRepository.findById(InstanceId.of(id));
+        if (instance.isEmpty()) {
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("error", "Instance not found");
+            return resp;
+        }
 
-        var snaps = snapshotRepository.findByInstanceId(InstanceId.of(id)).stream()
-            .map(s -> Map.<String, Object>of(
-                "stateName", s.stateName().value(),
-                "status", s.status().name(),
-                "attempt", s.attempt(),
-                "executedAt", s.executedAt().toString(),
-                "errorMessage", s.errorMessage() != null ? s.errorMessage() : ""
-            )).toList();
+        List<Map<String, Object>> snaps = snapshotRepository.findByInstanceId(InstanceId.of(id)).stream()
+            .map(s -> {
+                Map<String, Object> m = new LinkedHashMap<>();
+                m.put("stateName", s.stateName().value());
+                m.put("status", s.status().name());
+                m.put("attempt", s.attempt());
+                m.put("executedAt", s.executedAt().toString());
+                m.put("errorMessage", s.errorMessage() != null ? s.errorMessage() : "");
+                return m;
+            }).collect(Collectors.toList());
 
-        return Map.of(
-            "instance", Map.of("id", instance.get().id().value(), "status", instance.get().status().name(),
-                "businessId", instance.get().businessId() != null ? instance.get().businessId().value() : ""),
-            "snapshots", snaps
-        );
+        InstanceData inst = instance.get();
+        Map<String, Object> instMap = new LinkedHashMap<>();
+        instMap.put("id", inst.id().value());
+        instMap.put("status", inst.status().name());
+        instMap.put("businessId", inst.businessId() != null ? inst.businessId().value() : "");
+
+        Map<String, Object> resp = new LinkedHashMap<>();
+        resp.put("instance", instMap);
+        resp.put("snapshots", snaps);
+        return resp;
     }
 
     /**
@@ -165,8 +187,10 @@ public class DemoController {
     @PostMapping("/orders/{id}/retry")
     public Map<String, String> retryOrder(@PathVariable String id) {
         orderMachine.retry(id);
-        var updated = instanceRepository.findById(InstanceId.of(id)).orElse(null);
-        return Map.of("message", "已重新执行，当前状态: " + (updated != null ? updated.status() : "unknown"));
+        InstanceData updated = instanceRepository.findById(InstanceId.of(id)).orElse(null);
+        Map<String, String> resp = new LinkedHashMap<>();
+        resp.put("message", "已重新执行，当前状态: " + (updated != null ? updated.status() : "unknown"));
+        return resp;
     }
 
     // ===== 出库流程 =====
@@ -177,9 +201,9 @@ public class DemoController {
     @PostMapping("/outbound")
     public Map<String, Object> createOutbound(@RequestBody OutboundCreateRequest req) {
         String outboundNo = "OB-" + UUID.randomUUID().toString().substring(0, 8);
-        String warehouseCode = req.warehouseCode() != null && !req.warehouseCode().isBlank() ? req.warehouseCode() : "WH01";
-        int totalQty = req.totalQty() != 0 ? req.totalQty() : 100;
-        String carrierCode = req.carrierCode() != null && !req.carrierCode().isBlank() ? req.carrierCode() : "SF";
+        String warehouseCode = req.getWarehouseCode() != null && !req.getWarehouseCode().isBlank() ? req.getWarehouseCode() : "WH01";
+        int totalQty = req.getTotalQty() != 0 ? req.getTotalQty() : 100;
+        String carrierCode = req.getCarrierCode() != null && !req.getCarrierCode().isBlank() ? req.getCarrierCode() : "SF";
 
         OutboundContext ctx = new OutboundContext(outboundNo, warehouseCode, totalQty);
         ctx.setCarrierCode(carrierCode);
@@ -187,21 +211,21 @@ public class DemoController {
         try {
             ExecuteResult result = outboundMachine.execute(ctx, outboundNo);
             log.info("[demo] Outbound created: outboundNo={}, instanceId={}, status={}", outboundNo, result.instanceId(), result.status());
-            return Map.of(
-                "success", true,
-                "outboundNo", outboundNo,
-                "instanceId", result.instanceId(),
-                "status", result.status(),
-                "currentState", result.currentState(),
-                "message", result.status()
-            );
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", true);
+            resp.put("outboundNo", outboundNo);
+            resp.put("instanceId", result.instanceId());
+            resp.put("status", result.status());
+            resp.put("currentState", result.currentState());
+            resp.put("message", result.status());
+            return resp;
         } catch (StateMachineException e) {
             log.error("[demo] Outbound creation failed: outboundNo={}", outboundNo, e);
-            return Map.of(
-                "status", "FAILED",
-                "message", e.getMessage(),
-                "stackTrace", stackTrace(e)
-            );
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("status", "FAILED");
+            resp.put("message", e.getMessage());
+            resp.put("stackTrace", stackTrace(e));
+            return resp;
         }
     }
 
@@ -210,33 +234,39 @@ public class DemoController {
      */
     @PostMapping("/outbound/resume")
     public Map<String, Object> resumeOutbound(@RequestBody OutboundResumeRequest req) {
-        if (req.businessId() == null || req.businessId().isBlank()) {
-            return Map.of("success", false, "message", "缺少 businessId 参数");
+        if (req.getBusinessId() == null || req.getBusinessId().isBlank()) {
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("message", "缺少 businessId 参数");
+            return resp;
         }
-        if (req.expectedCurrentState() == null || req.expectedCurrentState().isBlank()) {
-            return Map.of("success", false, "message", "缺少 expectedCurrentState 参数");
+        if (req.getExpectedCurrentState() == null || req.getExpectedCurrentState().isBlank()) {
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("message", "缺少 expectedCurrentState 参数");
+            return resp;
         }
 
         try {
-            outboundMachine.resumeByBusinessId(req.businessId(), req.expectedCurrentState(), ctx -> {
-                if (req.carrierCode() != null && !req.carrierCode().isBlank()) {
-                    ctx.setCarrierCode(req.carrierCode());
+            outboundMachine.resumeByBusinessId(req.getBusinessId(), req.getExpectedCurrentState(), ctx -> {
+                if (req.getCarrierCode() != null && !req.getCarrierCode().isBlank()) {
+                    ctx.setCarrierCode(req.getCarrierCode());
                 }
             });
-            log.info("[demo] Outbound resumed: businessId={}", req.businessId());
-            return Map.of(
-                "success", true,
-                "businessId", req.businessId(),
-                "message", "出库已恢复执行，请查询 /demo/outbounds 查看最新状态"
-            );
+            log.info("[demo] Outbound resumed: businessId={}", req.getBusinessId());
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", true);
+            resp.put("businessId", req.getBusinessId());
+            resp.put("message", "出库已恢复执行，请查询 /demo/outbounds 查看最新状态");
+            return resp;
         } catch (StateMachineException e) {
-            log.error("[demo] Outbound resume failed: businessId={}", req.businessId(), e);
-            return Map.of(
-                "success", false,
-                "status", "FAILED",
-                "message", e.getMessage(),
-                "stackTrace", stackTrace(e)
-            );
+            log.error("[demo] Outbound resume failed: businessId={}", req.getBusinessId(), e);
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("success", false);
+            resp.put("status", "FAILED");
+            resp.put("message", e.getMessage());
+            resp.put("stackTrace", stackTrace(e));
+            return resp;
         }
     }
 
@@ -246,15 +276,17 @@ public class DemoController {
     @GetMapping("/outbounds")
     public List<Map<String, Object>> listOutbounds(@RequestParam(defaultValue = "10") int limit) {
         return instanceRepository.findByMachineName(MachineName.of("outbound-process"), 0, limit).stream()
-            .map(r -> Map.<String, Object>of(
-                "id", r.id().value(),
-                "businessId", r.businessId() != null ? r.businessId().value() : "",
-                "status", r.status().name(),
-                "currentState", r.currentState().value(),
-                "retryCount", r.retryCount(),
-                "errorMessage", r.errorMessage() != null ? r.errorMessage() : "",
-                "createdAt", r.createdAt().toString()
-            )).toList();
+            .map(r -> {
+                Map<String, Object> m = new LinkedHashMap<>();
+                m.put("id", r.id().value());
+                m.put("businessId", r.businessId() != null ? r.businessId().value() : "");
+                m.put("status", r.status().name());
+                m.put("currentState", r.currentState().value());
+                m.put("retryCount", r.retryCount());
+                m.put("errorMessage", r.errorMessage() != null ? r.errorMessage() : "");
+                m.put("createdAt", r.createdAt().toString());
+                return m;
+            }).collect(Collectors.toList());
     }
 
     /**
@@ -262,23 +294,34 @@ public class DemoController {
      */
     @GetMapping("/outbounds/{id}")
     public Map<String, Object> outboundDetail(@PathVariable String id) {
-        var instance = instanceRepository.findById(InstanceId.of(id));
-        if (instance.isEmpty()) return Map.of("error", "Instance not found");
+        Optional<InstanceData> instance = instanceRepository.findById(InstanceId.of(id));
+        if (instance.isEmpty()) {
+            Map<String, Object> resp = new LinkedHashMap<>();
+            resp.put("error", "Instance not found");
+            return resp;
+        }
 
-        var snaps = snapshotRepository.findByInstanceId(InstanceId.of(id)).stream()
-            .map(s -> Map.<String, Object>of(
-                "stateName", s.stateName().value(),
-                "status", s.status().name(),
-                "attempt", s.attempt(),
-                "executedAt", s.executedAt().toString(),
-                "errorMessage", s.errorMessage() != null ? s.errorMessage() : ""
-            )).toList();
+        List<Map<String, Object>> snaps = snapshotRepository.findByInstanceId(InstanceId.of(id)).stream()
+            .map(s -> {
+                Map<String, Object> m = new LinkedHashMap<>();
+                m.put("stateName", s.stateName().value());
+                m.put("status", s.status().name());
+                m.put("attempt", s.attempt());
+                m.put("executedAt", s.executedAt().toString());
+                m.put("errorMessage", s.errorMessage() != null ? s.errorMessage() : "");
+                return m;
+            }).collect(Collectors.toList());
 
-        return Map.of(
-            "instance", Map.of("id", instance.get().id().value(), "status", instance.get().status().name(),
-                "businessId", instance.get().businessId() != null ? instance.get().businessId().value() : ""),
-            "snapshots", snaps
-        );
+        InstanceData inst = instance.get();
+        Map<String, Object> instMap = new LinkedHashMap<>();
+        instMap.put("id", inst.id().value());
+        instMap.put("status", inst.status().name());
+        instMap.put("businessId", inst.businessId() != null ? inst.businessId().value() : "");
+
+        Map<String, Object> resp = new LinkedHashMap<>();
+        resp.put("instance", instMap);
+        resp.put("snapshots", snaps);
+        return resp;
     }
 
     /**
@@ -287,8 +330,10 @@ public class DemoController {
     @PostMapping("/outbounds/{id}/retry")
     public Map<String, String> retryOutbound(@PathVariable String id) {
         outboundMachine.retry(id);
-        var updated = instanceRepository.findById(InstanceId.of(id)).orElse(null);
-        return Map.of("message", "已重新执行，当前状态: " + (updated != null ? updated.status() : "unknown"));
+        InstanceData updated = instanceRepository.findById(InstanceId.of(id)).orElse(null);
+        Map<String, String> resp = new LinkedHashMap<>();
+        resp.put("message", "已重新执行，当前状态: " + (updated != null ? updated.status() : "unknown"));
+        return resp;
     }
 
     private String stackTrace(Throwable e) {
